# Steam-Spotify

./: .gitignore  AGENTS.md  Dockerfile  README.md  example.env  package-lock.json  package.json  tsconfig.json
.github/workflows/: beta-release.yml  ci.yml
desktop/: .gitignore  README.md  package.json  tailwind.config.cjs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/ui/: index.html  main.js  styles.css  tailwind.input.css
docs/agents/: change-scope.md  commands-and-ci.md  runtime-and-secrets.md  style-typescript.md  testing.md  tooling-rules-status.md
src/: app.js  config.test.ts  config.ts  index.ts  spotify.test.ts  spotify.ts  steam.ts
