[package]
name = "steam-spotify-desktop"
version = "0.1.0"
description = "Steam Spotify desktop wrapper"
authors = ["Steam Spotify"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
